<resources>
    <string name="app_name">Alfa Movies</string>
    <string name="label">Label</string>
    <string name="content_image">content image</string>
    <string name="votes">votes</string>
    <string name="retry">Retry</string>
    <string name="tv_loading">Loading...</string>
    <string name="action">action</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab">tab</string>
    <string name="general">General</string>
    <string name="production">Production</string>
    <string name="review">Review</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="icon">icon</string>
    <string name="adult">Adult</string>
    <string name="all_age">All Age</string>
    <string name="genre">Genre</string>
    <string name="official_page">Official Page</string>
    <string name="budget">Budget</string>
    <string name="running_time">Running Time</string>
    <string name="tagline">Tagline</string>
    <string name="revenue">Revenue</string>
    <string name="production_companies">Production Companies</string>
    <string name="internet_connection">Check your internet connection!</string>
    <string name="movie_information">Movie Information</string>
</resources>