<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".pages.info_movie.general.GeneralFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black_opacity_99"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_adult"
                android:id="@+id/ivAdult"
                android:contentDescription="@string/icon"
                app:tint="@color/adult" />

            <TextView
                android:id="@+id/textAdult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_opacity_99"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/rating"
                android:textColor="@color/pink"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_rate_ic"
                android:contentDescription="@string/icon"
                app:tint="@color/pink" />

            <TextView
                android:id="@+id/averageRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_opacity_99"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/voteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_opacity_99"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black_opacity_99"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvGenre"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            app:spanCount="2"
            android:background="@drawable/rounded_bg_unselected"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/badge_item"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>